# nsl

./: .gitignore  CMakeLists.txt
include/nsl/math/: polynomial.hh
include/nsl/ranges/: zip.hh
include/nsl/ranges/impl/: zip_impl.hh
test/math/: polynomial_test.cc
test/ranges/: zip_test.cc
